[gd_scene load_steps=3 format=3 uid="uid://dbh1gveesom7i"]

[ext_resource type="Script" uid="uid://drspbfh43h3r8" path="res://scripts/platformer/arachno/quote.gd" id="1_gi1oh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3sjf"]
size = Vector2(298, 242)

[node name="1" type="Area2D"]
script = ExtResource("1_gi1oh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(84, 29)
shape = SubResource("RectangleShape2D_k3sjf")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Start_offset" type="Timer" parent="."]
one_shot = true

[node name="Length" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Start_offset" to="." method="_on_start_offset_timeout"]
[connection signal="timeout" from="Length" to="." method="_on_length_timeout"]
